tests/zen/errors/match_fail.zen
-- Runtime match failure: no pattern matches
let x = 42
let result = match x
  | 1 -> "one"
  | 2 -> "two"
